--- a/2_data_collection.ipynb
+++ b/2_data_collection.ipynb
@@ -29,6 +29,7 @@
     "\n",
     "# converting content to data frame\n",
     "data_frame = pd.concat(content)"
+    "data_frame.to_csv('glassdoor_jobs.csv)"
    ]
   }
  ],
